--- a/reset.css
+++ b/reset.css
@@ -1,7 +1,8 @@
 body {
     font-family: "epilogue";
     font-size: 16px;
-    background-image: url("triangles.png"), url("background.png");
+    background: linear-gradient(180deg, #EE9062 41.67%, #384989 100%);
+    background-image: url("triangles.png");
     background-size: 100%;
     width: 100%;
     height: 100%;
