--- a/reset.css
+++ b/reset.css
@@ -1,8 +1,8 @@
 body {
     font-family: "epilogue";
     font-size: 16px;
-    background: linear-gradient(180deg, #EE9062 41.67%, #384989 100%);
-    background-image: url("triangles.png");
+    
+    background-image: url("triangles.png"), linear-gradient( 180deg, #EE9062 41.67%, #384989 100%);
     background-size: 100% 100%;
     width: 100%;
     height: 100%;
