--- a/reset.css
+++ b/reset.css
@@ -1,9 +1,9 @@
+  
 body {
     font-family: "epilogue";
     font-size: 16px;
-    
-    background-image: url("triangles.png"), linear-gradient( 180deg, #EE9062 41.67%, #384989 100%);
-    background-size: 100% 100%;
+    background-image: url("triangles.png"), url("background.png");
+    background-size: 100%;
     width: 100%;
     height: 100%;
     text-align: center;
