--- a/reset.css
+++ b/reset.css
@@ -2,7 +2,7 @@ body {
     font-family: "epilogue";
     font-size: 16px;
     background-image: url("triangles.png"), linear-gradient(180deg, #EE9062 41.67%, #384989 100%);
-    background-size: 100%;
+    background-size: cover;
     width: auto;
     height: 100%;
     min-height: 1032px;
