--- a/reset.css
+++ b/reset.css
@@ -1,17 +1,17 @@
+html {
+    background-image: url("triangles.png"), linear-gradient(180deg, #EE9062 41.67%, #384989 100%);
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+}
+
 body {
     font-family: "epilogue";
     font-size: 16px;
-    background-image: url("triangles.png"), linear-gradient(180deg, #EE9062 41.67%, #384989 100%);
-    background-size: cover;
-    width: auto;
-    height: 100%;
-    min-height: 1032px;
     text-align: center;
 }
 
-
 img {
-    
     padding: 8px;
     border-radius: 5px;
     background-color: rgba(196, 196, 196, 0.65);
@@ -48,18 +48,15 @@ input {
 }
 
 #password, #confirm {
-    
     background-color: rgba(196, 196, 196, 0.60);
     border-radius: 5px;
     border: none;
     height: 35px; 
     width: 400px;
     padding-left: 10%;
-     
 }
 
 #reset {
-    
     background-color: #ee9062;
     box-shadow: 0px 4px 4px rgba(99, 156, 200, 0.85);
     border-radius: 10px;
@@ -111,7 +108,6 @@ form {
     max-width: 400px;
 }
 
-
 .content {
     position: fixed;
     left: 50%;
@@ -122,7 +118,8 @@ form {
 
 
 @media (max-width: 450px) {
-    body {
+    
+    html {
         background-image: url("mobile-triangles.png"), linear-gradient(180deg, #EE9062 41.67%, #384989 100%);
     }
 
@@ -172,6 +169,7 @@ form {
     p {
         color :#E2E2E2;
     }
+
     input {
         max-width: 225px;
     }
